# watermelon-agent-demo

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO.md  README.md  pyproject.toml  requirements.txt  sample_video_script.md
src/github_agent/: agent.py  config.py  github_client.py  main.py  memory.py  models.py  planner.py  synthesis.py
